live/environments/lab/cluster/registry-proxy/1-netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress.docker-local-cache.8080
  namespace: itsystems-lab
spec:
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            namespace: ingress-nginx 
        podSelector:
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
      ports:
      - port: 8080
        protocol: TCP
  podSelector:
    matchLabels:
      app: docker-local-cache
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: docker-local-cache.docker-local-cache-redis.6379
  namespace: itsystems-lab
spec:
  ingress:
    - from: 
      - podSelector:
          matchLabels:
            app: docker-local-cache
      ports:
      - port: 6379
        protocol: TCP
  podSelector:
    matchLabels:
      app: docker-local-cache-redis
  policyTypes:
  - Ingress
